--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -63,3 +63,30 @@ h1{
 a{
     color: white;
 }
+
+/* FORMULARIO */
+        .formulario-contacto {
+            max-width: 600px;
+            margin: 30px auto;
+            background-color: black;
+            padding: 30px;
+            border-radius: 10px;
+            justify-items: center;
+            font-size: larger;
+            font-weight: bold;
+            display: block;
+            margin-bottom: 8px;
+
+        }
+        
+        .form-grupo{
+            margin-bottom: 20px;
+            color: white;
+            justify-content: center;
+            font-size: large;
+            width: 100%;
+            padding: 12px;
+            border: 2px solid #333;
+            border-radius: 5px;
+
+        }
