--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -48,7 +48,42 @@ body{
 .cuerpo-elenco{
     color: red;
     text-align: left;
-    padding: 100px;
+    padding: 100px;   
+}
+
+.cuerpo-elenco h1{
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+.elenco{
+    display: flex;
+    gap: 50px;
+    background-color: #0000008c;
+}
+
+.salma{
+    margin-left: 30px;
+}
+
+.zazie{
+    margin-left: 55px;
+}
+
+.aron{
+    margin-left: 40px;
+}
+
+.kate{
+    margin-left: 50px;
+}
+
+.josh{
+    margin-left: -40px;
+}
+
+.anjana{
+    margin-left: -25px;
 }
 
 .pie-elenco{
