--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -48,12 +48,13 @@ body{
 .cuerpo-elenco{
     color: red;
     text-align: left;
-    padding: 100px;   
+    padding: 100px;
+    background-color: #0000008c;  
 }
 
 .cuerpo-elenco h1{
-    padding-bottom: 100px;
     text-align: center;
+    background-color: #0000008c;
 }
 
 .elenco{
