--- a/CSS/confirmacion.css
+++ b/CSS/confirmacion.css
@@ -2,12 +2,16 @@
     box-sizing: border-box;
 }
 
-
-.cuerpo{
-    padding: 300px;
-    background-color: black;
-    color: red;
+.cuerpo {
+    background-image: url(../img/fondomain1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     font-family: 'figtree', sans-serif;
+    font-size: large;
+    padding: 300px;
+    color: red;
+
 }
 
 .Inicio {
