--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -34,7 +34,6 @@ body {
 
 .nav-centro li{
     margin: 10px;
-    background-color: red
 }
 
 .nav-izquierda{
@@ -47,6 +46,7 @@ ul{
 
 h1{
     margin-top: 100px;
+    backdrop-filter: blur 3px;
 }
 
 hr{
