--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -23,6 +23,7 @@ body{
     background-position: center;
     font-family: 'figtree', sans-serif;
     font-size: large;
+    background-attachment: fixed;
 }
 
 .nav-principal-elenco{
