--- a/CSS/style-premios.css
+++ b/CSS/style-premios.css
@@ -18,6 +18,7 @@ body{
     background-position: center;
     font-family: 'figtree', sans-serif;
     font-size: medium;
+    background-attachment: fixed;
 }
 
 .nav-principal-premios{
