--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -14,7 +14,7 @@ body {
     background-position: center;
     font-family: 'figtree', sans-serif;
     font-size: medium;
-
+    background-attachment: fixed;
 }
 
 .nav-principal-temporadas{
