--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -67,23 +67,23 @@ body{
 }
 
 .zazie{
-    margin-left: 0px;
+    padding: 30px;
 }
 
 .aron{
-    margin-left: -10px;
+    padding: 30px;
 }
 
 .kate{
-    margin-left: -10px;
+    padding: 30px;
 }
 
 .josh{
-    margin-left: -50px;
+    padding: 30px;
 }
 
 .anjana{
-    margin-left: -50px;
+    padding: 30px;
 }
 
 .pie-elenco{
