--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -221,15 +221,15 @@ a{
     }
     
     .salma {
-        padding: 15px;
+        /*padding: 15px;*/
         width: 100%;
         text-align: center;
         font-size: 13px;
     }
     
     .zazie, .aron, .kate, .josh, .anjana {
-        padding: 10px;
-        width: 50%;
+       /* padding: 10px;*/
+        width: 20%;
         text-align: center;
         font-size: 13px;
     }
