--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -62,7 +62,7 @@ body{
     gap: 30px;
 }
 
-.salma{
+/*.salma{
     padding: 30px;
 }
 
@@ -84,7 +84,7 @@ body{
 
 .anjana{
     padding: 0px;
-}
+}*/
 
 .pie-elenco{
     color: red;
