--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -147,7 +147,7 @@ a{
     
     .salma {
         padding: 20px;
-        width: 100%;
+        /*width: 100%;*/
         height: auto;
         text-align: center;
     }
