--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -147,8 +147,8 @@ a{
     
     .salma {
         padding: 20px;
-        /*width: 100%;*/
-        /*height: auto;*/
+        width: 150%;
+        height: auto;
         text-align: center;
     }
     
