--- a/CSS/style-contacto.css
+++ b/CSS/style-contacto.css
@@ -198,8 +198,6 @@ a{
         resize: vertical;
     }
     
-
-    
     .pie-contacto {
         margin-top: 60px;
         padding: 0 30px;
@@ -320,8 +318,4 @@ a{
         min-height: 80px;
         resize: vertical;
     }
-    
-
-    
-    
-
+}
