--- a/CSS/style-temporadas.css
+++ b/CSS/style-temporadas.css
@@ -146,7 +146,7 @@ a{
     }
     
     .logos-temporadas img {
-        max-width: 120px;
+        max-width: 100px;
         height: auto;
         margin: 10px;
     }
@@ -163,7 +163,7 @@ a{
     }
     
     .nav-principal-temporadas {
-        flex-direction: column;
+        flex-wrap: wrap;
         padding: 15px 10px;
     }
     
@@ -225,7 +225,6 @@ a{
     .cuerpo-temporadas li {
         margin: 10px 0;
         padding: 12px;
-        background-color: rgba(255,255,255,0.1);
         border-radius: 6px;
         text-align: left;
         font-size: 12px;
@@ -244,7 +243,7 @@ a{
     }
     
     .logos-temporadas img {
-        max-width: 80px;
+        max-width: 100px;
         height: auto;
         margin: 8px;
     }
