--- a/CSS/404.css
+++ b/CSS/404.css
@@ -9,7 +9,7 @@ body {
     background-position: center;
     font-family: 'figtree', sans-serif;
     font-size: large;
-
+    background-attachment: fixed;
 }
 
 .contenido{
