--- a/CSS/style-elenco.css
+++ b/CSS/style-elenco.css
@@ -225,7 +225,6 @@ a{
     .salma {
         /*padding: 15px;*/
         width: 100%;
-        height: auto;
         text-align: center;
         font-size: 13px;
     }
@@ -233,7 +232,7 @@ a{
     .zazie, .aron, .kate, .josh, .anjana {
        /* padding: 10px;*/
         width: 30%;
-        height: auto;
+        height: 30%;
         text-align: center;
         font-size: 13px;
     }
