--- a/CSS/confirmacion.css
+++ b/CSS/confirmacion.css
@@ -29,3 +29,45 @@
 .Inicio:hover {
     background-color:firebrick
 }
+
+/* DISENO RESPONSIVE*/
+
+/* Tablet - 768px y menor */
+@media screen and (max-width: 768px) {
+    .cuerpo {
+        padding: 100px 50px;
+        font-size: medium;
+        background-attachment: scroll; 
+    }
+    
+    .Inicio {
+        margin-left: 0;
+        margin: 0 auto;
+        display: block;
+        text-align: center;
+        padding: 12px 25px;
+        font-size: medium;
+        max-width: 200px;
+    }
+}
+
+/* Celular - 560px y menor */
+@media screen and (max-width: 560px) {
+    .cuerpo {
+        padding: 50px 20px;
+        font-size: small;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .Inicio {
+        margin: 20px auto 0;
+        padding: 10px 20px;
+        font-size: small;
+        max-width: 150px;
+        border-radius: 20px;
+    }
+}
