--- a/CSS/confirmacion.css
+++ b/CSS/confirmacion.css
@@ -38,6 +38,7 @@
         padding: 100px 50px;
         font-size: medium;
         background-attachment: scroll; 
+        text-align: center;
     }
     
     .Inicio {
