--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -169,8 +169,8 @@ a{
         width: 100%;
         max-width: 500px;
         height: auto;
-      /*  aspect-ratio: 16/9;
-        border-radius: 8px;*/
+        aspect-ratio: 16/9;
+        border-radius: 8px;
         margin: 20px auto;
         display: block;
     }
@@ -300,7 +300,7 @@ a{
     }
     
     .logos img {
-        max-width: 80px;
+        max-width: 50px;
         height: auto;
         margin: 8px;
     }
