--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -204,7 +204,7 @@ a{
     }
     
     .nav-principal {
-        flex-direction: column;
+      /*  flex-direction: column;*/
         padding: 15px 10px;
     }
     
