--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -79,6 +79,10 @@ a{
     text-align: left;
 }
 
+.oculto {
+  display: none; /* Oculta el botón por defecto */
+}
+
        
 /* DISENO RESPONSIVE*/
 
@@ -107,6 +111,10 @@ a{
         margin: 8px 12px;
         text-align: center;
     }
+
+    #miBoton {
+    display: block; /* Muestra el botón cuando el ancho de pantalla es 768px o más */
+  }
     
     .nav-izquierda {
         height: 50px;
@@ -221,6 +229,10 @@ a{
         font-size: 14px;
     }
     
+#miBoton {
+    display: block; /* Muestra el botón cuando el ancho de pantalla es 560px o más */
+  }
+
     .nav-izquierda {
         height: 45px;
         margin-bottom: 15px;
