--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -193,7 +193,56 @@ a{
 }
 
 @media screen and (max-width: 560px) {
+
+    .nav-centro {
+        display: none; /* Ocultamos el menú */
+    }
     
+    .nav-toggle {
+        display: block;
+        cursor: pointer;
+        color: white;
+        font-size: 24px;
+    }
+
+    .nav-centro.active {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .nav-centro li {
+        text-align: center;
+        margin: 5px 0;
+    }
+
+    nav {
+    background: #444;
+    color: #fff;
+    text-align: center;
+    }
+
+    nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    }
+
+    nav ul li {
+    display: inline;
+    margin-right: 10px;
+    font-size: 3rem;
+    }
+
+    nav ul li :hover {
+    background-color: #d3d3d3;
+    }
+
+    nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    }
+
     body {
         background-attachment: scroll;
         font-size: small;
