--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -198,11 +198,16 @@ a{
         display: none; /* Ocultamos el menú */
     }
     
-    .nav-toggle {
+    .hamburger {
         display: block;
         cursor: pointer;
         color: white;
         font-size: 24px;
+    }
+
+    #toggle:checked + .hamburger + nav-centro ul{
+        display: flex;
+        right: 0%;
     }
 
     .nav-centro.active {
