--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -194,11 +194,11 @@ a{
 
 @media screen and (max-width: 560px) {
 
-    .nav-centro {
+    .nav-menu {
         display: none; /* Ocultamos el menú */
     } 
 
-    .nav-centro.active {
+    .nav-menu.active {
         display: flex;
         flex-direction: column;
     }
@@ -210,7 +210,7 @@ a{
         font-size: 24px;
     }
 
-    .nav-centro li {
+    .nav-menu li {
         text-align: center;
         margin: 5px 0;
     }
