--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -204,7 +204,7 @@ a{
         display: none; /* Ocultamos el menú */
     } 
 
-  #nav-toggle:checked + nav-menu ul{
+.nav-toggle:checked + nav-menu ul{
     display: flex;
     right: 0;
   }
