--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -275,7 +275,7 @@ a{
     
     .nav-centro li {
         margin: 5px 0;
-        text-align: center;
+        text-align: left;
         width: 50%;
         font-size: 14px;
     }
