--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -224,6 +224,7 @@ a{
     .nav-menu li {
         text-align: left;
         margin: 5px 0;
+        display: block;
     }
 
     nav {
@@ -239,7 +240,7 @@ a{
     }
 
     nav ul li {
-    display: inline;
+    display: block;
     margin-right: 10px;
     font-size: 3rem;
     }
