--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -218,7 +218,7 @@ a{
 
     .burger{
         height: 100%;
-        font-size: x-large;
+        font-size: xx-large;
     }
 
    /* .nav-menu li {
@@ -265,7 +265,6 @@ a{
     }
     
     .nav-centro {
-        flex-direction: column;
         gap: 10px;
         width: 100%;
         justify-content: left;
